--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
     <!-- Add favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-
+    <link rel="shortcut icon" href="./amirprofile.png" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 
