--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
     <!-- Add favicon -->
+     <link rel="shortcut icon" href="amir.png" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 
