--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
+<!--     <link rel="shortcut icon" href="amir.png" type="image/x-icon"> -->
     <link rel="shortcut icon" href="amir.png" type="image/x-icon">
     <title>Portfolio</title>
 </head>
