changes in Navbar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="circle"></div>
                     </li>
                     <li class="nav_list">
-                        <a href="#projects" class="nav-link">Projects</a>
+                        <a href="#projects" class="nav-link">Projects and Certifications</a>
                         <div class="circle"></div>
                     </li>
                     <li class="nav_list">
