--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
 
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Amir Khurshid</a> - All rights reserved
+            <p>Copyright 2024 &copy; <a href="#home" style="text-decoration: none;">Amir Khurshid</a> - All rights reserved
             </p>
         </div>
     </footer>
