--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section class="section" id="contact">
         <div class="top-header">
             <h1>Get in touch</h1>
-            <span>Do you have a project in your mind, contact me here</span>
+            <span>Do if you have a project in your mind, contact me here</span>
         </div>
         <div class="row">
             <div class="col">
